--- a/money.html
+++ b/money.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Money</title>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
                 <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
+                <li><a href="visas.html">Визы</a></li>
                 <li><a href="money.html" class="active">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -38,7 +37,7 @@
                     <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
@@ -46,45 +45,34 @@
             </div>
         </div>
     </header>
-    <section class="container money__section">
+    <section class="container entry__section">
         <h2>Открытие счета в украинском банке (выпуск карты)</h2>
-        <h4>По опыту участников чата можно выпустить карту в <span>а-банке, Приватбанке, Райффайзен Банке и ПУМБ</span>.</h4>
+        <h4>По опыту участников чата можно выпустить карту в а-банке, Приватбанке, Райффайзен Банке и ПУМБ.</h4>
         <p><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
             интернет банкинг обычно недоступен без ИНН.</p>
-        <div class="links">
-            <p>Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
-                <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" target="blank">alfabank.ua</a></p>
-        </div>
-
-        <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту<br>
-            <span>Инструкция от Yuri</span></h3>
-        <ul>
-            <li>Открытие валютной карты в Райффайзен банке
-                Спачатку сказалі, што не можна. 
-                Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.
-                Патрэбна:
-                <ol>
-                    <li>Пашпарт</li>
-                    <li>Часовы від на жыхарства.
-                        (Посвідка на тимчасове проживання)
-                        Можна і без часовага віда на жыхарства</li>
-                    <li>Ідэнтыфікатар плацельшчыка падаткаў</li>
-                </ol>
-            </li>
-            <li>У прываце і укрсібе рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у прываце з посвідкай але без іпн, ва ўкрсібе
-                увогуле па пашпарту рб).</li>
+        <p>Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
+            <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" class="link" target="blank"><i class="fas fa-link"></i>alfabank.ua</a></p>
+        <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту, инструкция <span>от @Yuri</span></h3>
+        <h4>Открытие валютной карты в <span>Райффайзен банке</span>.</h4>
+        <h5>Спачатку сказалі, што не можна. Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.
+            Патрэбна:</h5>
+            <ol>
+                <li>Пашпарт</li>
+                <li>Часовы від на жыхарства (Посвідка на тимчасове проживання). Можна і без часовага віда на жыхарства</li>
+                <li>Ідэнтыфікатар плацельшчыка падаткаў</li>
+            </ol>
+        <h4>У <span>Прываце</span> і <span>Укрсібе</span> рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у Прываце з посвідкай але без іпн, ва Укрсібе
+            ўвогуле па пашпарту рб).</h4>
         </ul>
-        <h3>Открытие валютной карты в Райффайзен банке<br>
-            <span>Инструкция от Yuri</span></h3>
-        <p>Спачатку сказалі, што не можна. Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.</p>
-        <p><span>Патрэбна:</span></p>
-        <ol>
-            <li>Пашпарт</li>
-            <li>Часовы від на жыхарства.(Посвідка на тимчасове проживання)<br>
-                Можна і без часовага віда на жыхарства</li>
-            <li>Ідэнтыфікатар плацельшчыка  падаткаў</li>
-        </ol>
-        <p>У прываце і укрсібе рабiлi без ідэнтыфікатара плацельшчыка  падаткаў (у прываце з посвідкай але без іпн, ва ўкрсібе увогуле па пашпарту рб).</p>
+        <h2>Снятие наличных в банкоматах Львова</h2>
+        <h3>Информация от пользователя <span>@Aleksey</span></h3>
+        <p>Если у вас есть премиальное обслуживание, например от приора или альфабанка, можно снимать деньги без комиссии с обеих сторон.</p>
+        <h4>Не берет комиссию Агриколе и Идеябанк.</h4>
+        <p>Со стороны банков РБ комиссия от 2% у БСБ для карты в byn, остальные выше.</p>
+        <p>Минимальная сумма комиссии со стороны банка в рб, что то в районе 5-7byn, то есть снимать наличку по чуть чуть не стоит, минимум 300+ byn с рублевой карты.
+            Предположим, если <span>снять 1000</span> гривен, комиссия будет не 2%, а <span>5%</span>, так как банк РБ возьмет минимальную сумму комиссии в <span>5byn</span>.</p>
+        <h4>В райфайзен банкоматах фикс комиссия 50 грн (лимит вроде 30 банкнот) и курс более-менее нормальный, <span>от пользователя @Az</span></h4>
+
     </section>
 </body>
 
