--- a/entry.html
+++ b/entry.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
@@ -21,7 +22,7 @@
                 <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
+                <li><a href="visas.html">Визы</a></li>
                 <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -38,7 +39,7 @@
                     <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
@@ -48,21 +49,21 @@
     </header>
     <section class="container entry__section">
         <h2>Въезд в Украину</h2>
-        <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
+        <h4>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h4>
         <div class="links">
-            <a href="https://moz.gov.ua/" class="entry__link" target="blank"><i class="fas fa-link"></i> https://moz.gov.ua/</a>
+            <a href="https://moz.gov.ua/" class="link" target="blank"><i class="fas fa-link"></i> https://moz.gov.ua/</a>
         </div>
         <h4>Основная Информация для въезда в Украину:</h4>
         <div class="links">
-            <a href="https://visitukraine.today/ru" class="entry__link" target="blank"><i class="fas fa-link"></i>visitukraine.today</a>
-            <a href="https://t.me/bel_ukr" class="entry__link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
+            <a href="https://visitukraine.today/ru" class="link" target="blank"><i class="fas fa-link"></i>visitukraine.today</a>
+            <a href="https://t.me/bel_ukr" class="link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
         </div>
         
         </div>
-        <h3>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ</h3>
-        <p>Временный вид на жительство в Украине не является причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
-        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" target="blank"><i class="fas fa-link"></i> Официальный ответ ГПК</a></div>
-        <h3>Основание: "Лечение"</h3>
+        <h3>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ:</h3>
+        <p>Временный вид на жительство в Украине <span>не является</span> причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
+        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" class="link" target="blank"><i class="fas fa-link"></i> Официальный ответ ГПК</a></div>
+        <h3>Основание "Лечение":</h3>
         <h4>Для белорусских пограничников:</h4>
         <ol>
             <li>Приглашение от медицинской клиники на фирменном бланке с печатью, 
