--- a/fop.html
+++ b/fop.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>FOP</title>
 </head>
@@ -21,7 +20,7 @@
                 <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html" class="active">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
+                <li><a href="visas.html">Визы</a></li>
                 <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -38,7 +37,7 @@
                     <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
@@ -46,8 +45,13 @@
             </div>
         </div>
     </header>
-    <section class="container fop__section">
-        <h2>Пошаговая инструкция открытия ФОП от участника группы <span>@bellviv:</span></h2>
+    <section class="container entry__section">
+        <h1>ФОП и ИНН</h1>
+        <h3>Головне управління ДПС у Львівській області <a href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" class="link" target="blank"><i class="fas fa-link"></i>lv.tax.gov.ua</a></h3>
+        <h3>Инструкция от пользователя <span>@drpzk</span>
+            <a href="https://www.immigration2ukraine.org/fop.html" class="link" target="blank"><i class="fas fa-link"></i>immigration2ukraine.org</a></h3>
+
+        <h3>Пошаговая инструкция открытия ФОП от участника группы <span>@bellviv:</span></h3>
         <ol>
             <li>Дагавор арэнды жылля.</li>
             <li>Пераклад пашпарта ў натарыўса.</li>
@@ -55,23 +59,20 @@
             <li>Рэгістрацыя ФОП у СНАП.</li>
             <li>Рэгістрацыя ФОП у Падатковай.</li>
         </ol>
-        <h2>Дополнение от пользователя <span>@Verym_Mozham_Peramozham</span>:</h2>
+        <h3>Дополнение от пользователя <span>@Verym_Mozham_Peramozham</span>:</h3>
         <p>- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
             его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
             Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки</p>
-        <h2>ФОП 3 группы<br>
-            <span>инструкция от @Verym_Mozham_Peramozham</span></h2>
-        <p>Итак, рабочий алгоритм, проверено на себе:<br>
-        </p>
+        <h3>ФОП 3 группы, инструкция от <span>@Verym_Mozham_Peramozham</span></h3>
+        <h5>Итак, рабочий алгоритм, проверено на себе:</h5>
         <ol>
             <li>идёте в налоговую и получаете ИНН: потребуется заверенный перевод паспорта и его копия, копию заберут</li>
             <li>затем с ИНН и его копией идёте в другой кабинет налоговой и получаете ЭЦП</li>
             <li>тут заберут оригинал перевода. С этим ЭЦП заходите на сайт Дии, 
-                заполняете там паспортные данные и заявляетесь на ФОП.</li>
+                заполняете там паспортные данные и заявляетесь на ФОП.<br>
+                Его открывают за сутки</li>
         </ol>
-        <p>Его открывают за сутки</p>
-
-        <h2>ИНН / РНОКПП</h2>
+        <h3>ИНН / РНОКПП</h3>
         <h4>вул. Стрийська, 35</h4>
         <ol>
             <li>Паспорт</li>
@@ -82,36 +83,32 @@
             <li>Беларуский УНП можно не указывать</li>
             <li>Просить номер по которому проверять готовность</li>
         </ol>
-        <h2><span>Инструкция от пользователя @drpzk</span></h2>
-        <div class="links"><a href="https://www.immigration2ukraine.org/fop.html" target="blank">immigration2ukraine.org</a></div>
-        
-        <h4>Головне управління ДПС у Львівській області <a href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" target="blank">lv.tax.gov.ua</a></h4>
 
-        <h2>Полезная информация обладателям ФОПа:</h2>
+        <h3>Полезная информация обладателям ФОПа:</h3>
         <h4>ФЛП имеет два счета:</h4>
         <ol>
             <li>предпринимательский текущий счет (2600)</li>
             <li>текущий или карточный личный счет для собственных нужд физического лица (2620).</li>
         </ol>
         <h3>Постановление НБУ № 89 от 11.09.2017 г.[1]</h3>
-        <p>ФЛП, открывая текущий счет в банке, имеет право открыть также карточный счет для собственных нужд физического лица.
+        <p>ФЛП, открывая текущий счет в банке, имеет право открыть <span>также карточный счет</span> для собственных нужд физического лица.
             К текущим счетам банки выпускают платежные карточки, которые фактически работают как «ключ к счету».
             ЗУ «О платежных системах и переводе средств в Украине».[2]</p>
         <p>Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
-            жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление облагается налогом как
+            жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление <span>облагается налогом</span> как
             дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2 ст. 176 НКУ,
             ФЛП становится налоговым агентом по отношению к таким физлицам.
-            Если ФЛП перечисляет предпринимательский доход на свой карточный счет (2620), а уже потом перечисляет деньги таким
+            Если ФЛП перечисляет предпринимательский доход <span>на свой карточный счет</span> (2620), а уже потом перечисляет деньги таким
             родственникам, то налогообложение составляет 0% (п. 174.6 ст. 174 НКУ[5]).</p>
         <p>При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
-            (не из числа членов семьи) без указания конкретного вида дохода может быть расценено налоговым органом у получателя
+            (не из числа членов семьи) <span>без указания конкретного вида дохода</span> может быть расценено налоговым органом у получателя
             физлица как получение прочего дохода (п. 164.2.20 НКУ[6]) и обложено НДФЛ-18% и военным сбором 1,5%.
             Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие переводы могут
             быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя средств.
-            Если говорить о единоразовых переводах на физ лиц, то рекомендуется указывать назначение платежа («бронь домика»,
+            Если говорить о <span>единоразовых переводах на физ лиц</span>, то рекомендуется указывать назначение платежа («бронь домика»,
             «оплата товара»), при этом избегать регулярных переводов и больших сумм.</p>
         <p>Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
-            органа о происхождении дохода, вы сможете доказать такой доход.</p>
+            органа о происхождении дохода, вы сможете <span>доказать</span> такой доход.</p>
     </section>
 </body>
 
