--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
@@ -23,7 +22,7 @@
         <li><a href="rent.html">Аренда</a></li>
         <li><a href="legalisation.html">ВНЖ</a></li>
         <li><a href="fop.html">ФОП</a></li>
-        <li><a href="viza.html">Визы</a></li>
+        <li><a href="visas.html">Визы</a></li>
         <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
         <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -40,7 +39,7 @@
           <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
           <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
           <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-          <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+          <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
           <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
