--- a/legalisation.html
+++ b/legalisation.html
@@ -22,7 +22,7 @@
         <li><a href="rent.html">Аренда</a></li>
         <li><a href="legalisation.html" class="active">ВНЖ</a></li>
         <li><a href="fop.html">ФОП</a></li>
-        <li><a href="viza.html">Визы</a></li>
+        <li><a href="visas.html">Визы</a></li>
         <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
         <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -39,7 +39,7 @@
           <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
           <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
           <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-          <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+          <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
           <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
