--- a/lviv.html
+++ b/lviv.html
@@ -21,7 +21,7 @@
                 <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
+                <li><a href="visas.html">Визы</a></li>
                 <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html" class="active">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -38,7 +38,7 @@
                     <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
