--- a/rent.html
+++ b/rent.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Rent</title>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
         <li><a href="rent.html" class="active">Аренда</a></li>
         <li><a href="legalisation.html">ВНЖ</a></li>
         <li><a href="fop.html">ФОП</a></li>
-        <li><a href="viza.html">Визы</a></li>
+        <li><a href="visas.html">Визы</a></li>
         <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
         <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -40,7 +39,7 @@
           <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
           <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
           <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-          <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+          <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
           <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
@@ -48,73 +47,73 @@
       </div>
     </div>
   </header>
-  <section class="container rent__section">
-    <h2>Поиск жилья</h1>
-    <div class="rent__box">
-      <a class="rent__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
-        <div class="rent__item">
-          <img class="rent__logo" src="./img/olx-logo-60h.png" alt="">
-          <p class="rent__title">olx.ua</p>
+  <section class="container entry__section">
+    <h1>Поиск жилья</h1>
+    <div class="box">
+      <a class="box__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+        <div class="item">
+          <img class="logo" src="./img/olx-logo-60h.png" alt="">
+          <p class="title">olx.ua</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.real-estate.lviv.ua">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.real-estate.lviv.ua">
+        <div class="item">
           <i class="fas fa-home"></i>
-          <p class="rent__title">real-estate.lviv.ua</p>
+          <p class="title">real-estate.lviv.ua</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
+        <div class="item">
           <i class="fab fa-telegram"></i>
-          <p class="rent__title">Нерухомість Львів</p>
+          <p class="title">Нерухомість Львів</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://t.me/orendakvartyrlviv">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://t.me/orendakvartyrlviv">
+        <div class="item">
           <i class="fab fa-telegram"></i>
-          <p class="rent__title">Оренда. Квартири. Кімнати. Львів.</p>
+          <p class="title">Оренда. Квартири. Кімнати. Львів.</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">Оренда У Львові БЕЗ маклерів!</p>
+          <p class="title">Оренда У Львові БЕЗ маклерів!</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">No makler - Львів</p>
+          <p class="title">No makler - Львів</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">Оренда квартир Львів</p>
+          <p class="title">Оренда квартир Львів</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/realtyua">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/realtyua">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">Нерухомість у Львові/</p>
+          <p class="title">Нерухомість у Львові</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">Оренда без маклера</p>
+          <p class="title">Оренда без маклера</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">оренда хат без маклєрят</p>
+          <p class="title">оренда хат без маклєрят</p>
         </div>
       </a>
-      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/orendra">
-        <div class="rent__item">
+      <a class="box__link" target="blank" href="https://www.facebook.com/groups/orendra">
+        <div class="item">
           <i class="fab fa-facebook-square"></i>
-          <p class="rent__title">ОРЕНДА КВАРТИР ЛЬВІВ</p>
+          <p class="title">ОРЕНДА КВАРТИР ЛЬВІВ</p>
         </div>
       </a>
     </div>
