--- a/visas.html
+++ b/visas.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Visas</title>
 </head>
 
 <body>
@@ -21,7 +20,7 @@
                 <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html" class="active">Визы</a></li>
+                <li><a href="visas.html" class="active">Визы</a></li>
                 <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="vaccinations.html">Вакцинация</a></li>
@@ -38,7 +37,7 @@
                     <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
                     <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
@@ -46,13 +45,21 @@
             </div>
         </div>
     </header>
-    <section class="container viza__section">
+    <section class="container entry__section">
         <h2>Гуманитарная виза</h2>
         <p>Страховку можно купить за 900 грн возле польского консульства.</p>
-        <p>Тут <a href="https://t.me/belaruscentrlviv/163" class="entry__link">t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство в Львове.
+        <p>Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство <span>в Львове</span>.
             Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
 
         <h2>Виза Polish Business Harbour</h2>
+        <h3>Чат Польши:</h3>
+        <p>Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span> <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+            https://t.me/PBH_BY2PLN</a>.
+        </p>
+        <h3>Чат Украины:</h3>
+        <p>Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+            https://t.me/PBH_UA2PLN</a>.
+        </p>
     </section>
 </body>
 
