--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
               </p>
           </div>
         </div>
+        <div class="carousel-item" data-bs-touch='true'>
+          <a href="http://belaruscentr.tilda.ws/" class="carousel__card" target="blank">
+            <div class="description crysis">
+              <img src="img/Logo-bkc.png" alt="logo-bkc" class="crysis__logo">
+              <h3>Беларускі крызісны цэнтр</h3>
+                <p class="text">у Львове дапамагае беларусам,<br>
+                  якія змушаны былі з'ехаць з Радзімы
+                </p>
+            </div>
+          </a>
+          
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
