--- a/money.html
+++ b/money.html
@@ -48,9 +48,9 @@
     <section class="container entry__section">
         <h2>Открытие счета в украинском банке (выпуск карты)</h2>
         <h4>По опыту участников чата можно выпустить карту в а-банке, Приватбанке, Райффайзен Банке и ПУМБ.</h4>
-        <p><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
+        <p class="text"><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
             интернет банкинг обычно недоступен без ИНН.</p>
-        <p>Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
+        <p class="text">Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
             <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" class="link" target="blank"><i class="fas fa-link"></i>alfabank.ua</a></p>
         <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту, инструкция <span>от @Yuri</span></h3>
         <h4>Открытие валютной карты в <span>Райффайзен банке</span>.</h4>
@@ -66,13 +66,41 @@
         </ul>
         <h2>Снятие наличных в банкоматах Львова</h2>
         <h3>Информация от пользователя <span>@Aleksey</span></h3>
-        <p>Если у вас есть премиальное обслуживание, например от приора или альфабанка, можно снимать деньги без комиссии с обеих сторон.</p>
+        <p class="text">Если у вас есть премиальное обслуживание, например от приора или альфабанка, можно снимать деньги без комиссии с обеих сторон.</p>
         <h4>Не берет комиссию Агриколе и Идеябанк.</h4>
-        <p>Со стороны банков РБ комиссия от 2% у БСБ для карты в byn, остальные выше.</p>
-        <p>Минимальная сумма комиссии со стороны банка в рб, что то в районе 5-7byn, то есть снимать наличку по чуть чуть не стоит, минимум 300+ byn с рублевой карты.
+        <p class="text">Со стороны банков РБ комиссия от 2% у БСБ для карты в byn, остальные выше.</p>
+        <p class="text">Минимальная сумма комиссии со стороны банка в рб, что то в районе 5-7byn, то есть снимать наличку по чуть чуть не стоит, минимум 300+ byn с рублевой карты.
             Предположим, если <span>снять 1000</span> гривен, комиссия будет не 2%, а <span>5%</span>, так как банк РБ возьмет минимальную сумму комиссии в <span>5byn</span>.</p>
         <h4>В райфайзен банкоматах фикс комиссия 50 грн (лимит вроде 30 банкнот) и курс более-менее нормальный, <span>от пользователя @Az</span></h4>
-
+        <h2></h2>
+        <h3>Информация про Альфу и перевод денег от пользователя <span>@Drpzk</span></h3>
+        <ol>
+            <li>
+                <a href="https://old.alfabank.ua/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" class="link" target="blank">
+                    <i class="fas fa-link"></i>Нерезиденти можуть оформити безкоштовні карти</a>
+            </li>
+            <li>
+                <a href="https://help.alfabank.by/hc/ru/articles/360004700258" class="link" target="blank">
+                    <i class="fas fa-link"></i>Международный перевод SWIFT в InSync</a>
+            </li>
+        </ol>
+        <h4>ukr:</h4>
+        <ol>
+            <li>Нужен инн</li>
+            <li>Паспорт + перевод</li>
+            <li>Просить внести данные кириллицей (отказались)</li>
+        </ol>
+        <ul>
+            <li>Снятие гривен в банкомате по лимиту в месяц без комиссии</li>
+            <li>2 раза в месяц можно снимать в кассе без лимита (и доллары)</li>
+            <li>Пополнение в кассе: больше $10k - без комиссии, меньше - 50 грн</li>
+        </ul>
+        <h4>bel:</h4>
+        <ul>
+            <li>Свифт перевод из доллара в доллары, стоит максимум 30р независимо от суммы, в месяц можно переводить до $22k</li>
+            <li>Smart Black: SWIFT - 15р</li>
+            <li>Smart Black Family: 3 бесплатных SWIFT перевода в год - дальше 7р</li>
+        </ul>
     </section>
 </body>
 
