--- a/visas.html
+++ b/visas.html
@@ -47,17 +47,17 @@
     </header>
     <section class="container entry__section">
         <h2>Гуманитарная виза</h2>
-        <p>Страховку можно купить за 900 грн возле польского консульства.</p>
-        <p>Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство <span>в Львове</span>.
+        <p class="text">Страховку можно купить за 900 грн возле польского консульства.</p>
+        <p class="text">Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство <span>в Львове</span>.
             Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
 
         <h2>Виза Polish Business Harbour</h2>
         <h3>Чат Польши:</h3>
-        <p>Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span> <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+        <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span> <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
             https://t.me/PBH_BY2PLN</a>.
         </p>
         <h3>Чат Украины:</h3>
-        <p>Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+        <p class="text">Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
             https://t.me/PBH_UA2PLN</a>.
         </p>
     </section>
