--- a/entry.html
+++ b/entry.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
@@ -61,7 +61,7 @@
         
         </div>
         <h3>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ:</h3>
-        <p>Временный вид на жительство в Украине <span>не является</span> причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
+        <p class="text">Временный вид на жительство в Украине <span>не является</span> причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
         <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" class="link" target="blank"><i class="fas fa-link"></i> Официальный ответ ГПК</a></div>
         <h3>Основание "Лечение":</h3>
         <h4>Для белорусских пограничников:</h4>
