--- a/fop.html
+++ b/fop.html
@@ -46,7 +46,7 @@
         </div>
     </header>
     <section class="container entry__section">
-        <h1>ФОП и ИНН</h1>
+        <h2>ФОП и ИНН</h2>
         <h3>Головне управління ДПС у Львівській області <a href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" class="link" target="blank"><i class="fas fa-link"></i>lv.tax.gov.ua</a></h3>
         <h3>Инструкция от пользователя <span>@drpzk</span>
             <a href="https://www.immigration2ukraine.org/fop.html" class="link" target="blank"><i class="fas fa-link"></i>immigration2ukraine.org</a></h3>
@@ -60,7 +60,7 @@
             <li>Рэгістрацыя ФОП у Падатковай.</li>
         </ol>
         <h3>Дополнение от пользователя <span>@Verym_Mozham_Peramozham</span>:</h3>
-        <p>- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
+        <p class="text">- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
             его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
             Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки</p>
         <h3>ФОП 3 группы, инструкция от <span>@Verym_Mozham_Peramozham</span></h3>
@@ -91,23 +91,23 @@
             <li>текущий или карточный личный счет для собственных нужд физического лица (2620).</li>
         </ol>
         <h3>Постановление НБУ № 89 от 11.09.2017 г.[1]</h3>
-        <p>ФЛП, открывая текущий счет в банке, имеет право открыть <span>также карточный счет</span> для собственных нужд физического лица.
+        <p class="text">ФЛП, открывая текущий счет в банке, имеет право открыть <span>также карточный счет</span> для собственных нужд физического лица.
             К текущим счетам банки выпускают платежные карточки, которые фактически работают как «ключ к счету».
             ЗУ «О платежных системах и переводе средств в Украине».[2]</p>
-        <p>Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
+        <p class="text">Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
             жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление <span>облагается налогом</span> как
             дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2 ст. 176 НКУ,
             ФЛП становится налоговым агентом по отношению к таким физлицам.
             Если ФЛП перечисляет предпринимательский доход <span>на свой карточный счет</span> (2620), а уже потом перечисляет деньги таким
             родственникам, то налогообложение составляет 0% (п. 174.6 ст. 174 НКУ[5]).</p>
-        <p>При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
+        <p class="text">При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
             (не из числа членов семьи) <span>без указания конкретного вида дохода</span> может быть расценено налоговым органом у получателя
             физлица как получение прочего дохода (п. 164.2.20 НКУ[6]) и обложено НДФЛ-18% и военным сбором 1,5%.
             Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие переводы могут
             быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя средств.
             Если говорить о <span>единоразовых переводах на физ лиц</span>, то рекомендуется указывать назначение платежа («бронь домика»,
             «оплата товара»), при этом избегать регулярных переводов и больших сумм.</p>
-        <p>Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
+        <p class="text">Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
             органа о происхождении дохода, вы сможете <span>доказать</span> такой доход.</p>
     </section>
 </body>
