--- a/rent.html
+++ b/rent.html
@@ -48,75 +48,137 @@
     </div>
   </header>
   <section class="container entry__section">
-    <h1>Поиск жилья</h1>
-    <div class="box">
-      <a class="box__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+    <div class="rent__box">
+      <h2>Поиск жилья</h2>
+      <div class="links">
+        <a href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/" class="link" target="blank">
+          <i class="fas fa-link"></i>olx.ua</a>
+        <p class="text">OLX – одна из лидирующих онлайн-площадок объявлений мира, представленная более чем в 40 странах.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.real-estate.lviv.ua" class="link" target="blank">
+          <i class="fas fa-link"></i>real-estate.lviv.ua</a>
+          <p class="text">Нерухомість Львова</p>
+      </div>
+      <div class="links">
+        <a href="https://t.me/neruhomist_lviv_ua" class="link" target="blank">
+          <i class="fab fa-telegram"></i>neruhomist_lviv_ua</a>
+          <p class="text">Нерухомість Львів, ПОШУК / ПРОДАЖ / ОРЕНДА / 20 444 members</p>
+      </div>
+      <div class="links">
+        <a href="https://t.me/orendakvartyrlviv" class="link" target="blank">
+          <i class="fab fa-telegram"></i>orendakvartyrlviv</a>
+          <p class="text">Оренда. Квартири. Кімнати. Львів. 3 965 members</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/rent032/" class="link" target="blank">
+          <i class="fab fa-facebook"></i>rent032</a>
+          <p class="text">Оренда У Львові БЕЗ маклерів !Rent Lviv !No Makler! Закрытая группа. Участники: 81,8 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/nomakler.lviv/" class="link" target="blank">
+          <i class="fab fa-facebook"></i>nomakler.lviv</a>
+          <p class="text">No makler - Львів. Общедоступная группа. 
+            Участники: 41,0 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/448598442160044" class="link" target="blank">
+          <i class="fab fa-facebook"></i>groups/44859...</a>
+          <p class="text">Оренда квартир Львів , Нерухомість у Львові , Продаж квартир у Львові. Закрытая группа. Участники: 15,2 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/realtyua" class="link" target="blank">
+          <i class="fab fa-facebook"></i>realtyua</a>
+          <p class="text">Нерухомість у Львові, Квартири Львова, Оренда та продаж Львів. Закрытая группа. Участники: 29,9 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/rentlvivnomakler" class="link" target="blank">
+          <i class="fab fa-facebook"></i>rentlvivnomakler</a>
+          <p class="text">Оренда без маклера Квартири кімнати Львів Оренда у Львові БЕЗ ПОСЕРЕДНИКІВ. Закрытая группа. Участники: 57,0 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/HLorenda" class="link" target="blank">
+          <i class="fab fa-facebook"></i>HLorenda</a>
+          <p class="text">оренда хат без маклєрят. Закрытая группа. Участники: 20,3 тыс.</p>
+      </div>
+      <div class="links">
+        <a href="https://www.facebook.com/groups/orendra" class="link" target="blank">
+          <i class="fab fa-facebook"></i>orendra</a>
+          <p class="text">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ. Общедоступная группа. Участники: 48,5 тыс.</p>
+      </div>
+    </div>
+      
+
+      
+
+    <!-- <div class="box"> -->
+      <!-- <a class="box__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
         <div class="item">
           <img class="logo" src="./img/olx-logo-60h.png" alt="">
           <p class="title">olx.ua</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.real-estate.lviv.ua">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.real-estate.lviv.ua">
         <div class="item">
           <i class="fas fa-home"></i>
           <p class="title">real-estate.lviv.ua</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
         <div class="item">
           <i class="fab fa-telegram"></i>
           <p class="title">Нерухомість Львів</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://t.me/orendakvartyrlviv">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://t.me/orendakvartyrlviv">
         <div class="item">
           <i class="fab fa-telegram"></i>
           <p class="title">Оренда. Квартири. Кімнати. Львів.</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда У Львові БЕЗ маклерів!</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">No makler - Львів</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда квартир Львів</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/realtyua">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/realtyua">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Нерухомість у Львові</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда без маклера</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">оренда хат без маклєрят</p>
         </div>
-      </a>
-      <a class="box__link" target="blank" href="https://www.facebook.com/groups/orendra">
+      </a> -->
+      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/orendra">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">ОРЕНДА КВАРТИР ЛЬВІВ</p>
         </div>
       </a>
-    </div>
+    </div> -->
   </section>
   <script src="script.js"></script>
 </body>
