--- a/vaccinations.html
+++ b/vaccinations.html
@@ -8,10 +8,8 @@
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Vaccinations</title>
 </head>
 
 <body>
@@ -50,15 +48,16 @@
     <section class="container entry__section">
         <h2>Вакцинация в Украине</h2>
         <h3>Кто может вакцинироваться:</h3>
-        <p>Все находящиеся на территории Украины, разница лишь в том, какой сертификат о вакцинации можно получить.</p>
-        <p>Ссылка на закон: Іноземці та особи без громадянства можуть вакцинуватися від COVID-19 в Україні</p>
+        <p class="text">Все находящиеся на территории Украины, разница лишь в том, какой сертификат о вакцинации можно получить.</p>
+        <p class="text">Ссылка на закон: Іноземці та особи без громадянства можуть вакцинуватися від COVID-19 в Україні</p>
         <div class="links"><a href="https://moz.gov.ua/article/news/inozemci-ta-osobi-bez-gromadjanstva-mozhut-vakcinuvatisja-vid-covid-19-v-ukraini" class="link" target="blank"><i class="fas fa-link"></i>visitukraine.today</a></div>
+        
         <h3>Где вакцинироваться:</h3>
-        <p>Точки вакцинации и время работы пунктов можно посмотреть тут, наличие вакцины нужно узнавать по телефону или при обращении в центр.</p>
+        <p class="text">Точки вакцинации и время работы пунктов можно посмотреть тут, наличие вакцины нужно узнавать по телефону или при обращении в центр.</p>
         <h4>Список пунктів щеплень та центрів масової вакцинації</h4>
         <div class="links">
-            <p>Государственный сайт <a href="https://list.covid19.gov.ua/" class="link" target="blank"><i class="fas fa-link"></i>list.covid19.gov.ua</a></p>
-            <p>Частный медицинский агрегатор с подробным FAQ на часто задаваемые вопросы о вакцинации, на нем также можно найти ликаря 
+            <p class="text">Государственный сайт <a href="https://list.covid19.gov.ua/" class="link" target="blank"><i class="fas fa-link"></i>list.covid19.gov.ua</a></p>
+            <p class="text">Частный медицинский агрегатор с подробным FAQ на часто задаваемые вопросы о вакцинации, на нем также можно найти ликаря 
             <a href="https://helsi.me/lp/vaccination" class="link" target="blank"><i class="fas fa-link"></i>helsi.me</a></p>
         </div>
         <h3>Виды сертификатов:</h3>
@@ -84,7 +83,37 @@
             </li>
         </ol>
         <h3>Где найти лікаря:</h3>
-        <p>Тут <a href="https://helsi.me/doctors/lviv" class="link" target="blank"><i class="fas fa-link"></i>helsi.me/doctors</a>, проверенный подписчиками канала medicover.ua</p>
+        <p class="text">Тут <a href="https://helsi.me/doctors/lviv" class="link" target="blank"><i class="fas fa-link"></i>helsi.me/doctors</a>, проверенный подписчиками канала medicover.ua</p>
+
+        <h3>Где вакцинироваться от коронавируса во Львове</h3>
+        <h4>Инструкция по вакцинации и получении международного свидетельства о вакцинации без декларации с семейным доктором от пользователя <span>@berestwa</span>:</h4>
+        <h5><span>Реквизиты:</span> <br>
+            4-я міська клінічна лікарня м.Лівова
+            Консультація сімейного лікаря (#2 відділення)
+        </h5>
+        <ul>
+            <li>Каждый раз при получении вакцины я платил 145 грн в терминале внутри поликлиники. Заходил на вакцинацию в 3 кабинет с чеком оплаты. 
+                Но и совсем бесплатно иногда делают.</li>
+            <li>Имея только паспорт РБ (ИНН тоже есть, но его не требовали), сходил в 4 поликлинику на 2 дозу Пфайзера.</li>
+            <li>Получение 2 дозы + получение международного свидетельства о вакцинации заняло ~1.5 часа.</li>
+            <li>Каких-то огромных очередей нет, медперсонал понимающий.</li>
+            <li>В кабинете #3 в довидку 063, которую получил после 1 дозы, записали, что получил 2 дозу. </li>
+            <li>Потом в кабинет #3А стоял в очереди на получение международного свидетельства о вакцинации.</li>
+            <li>Сотрудница поликлиники в кабинете #3А переписала данные для английской версии с паспорта, а для украинской версии с нотариального перевода.</li>
+        </ul>
+        <h4>Чтобы получить <span>международное свидетельство о вакцинации</span>, если вас нету в базе E-Health/Helsi 
+            (т.е. если нету декларации с семейным доктором), нужно:</h4>
+        <ol>
+            <li>довидка 063, где указано, что вы получили 2 дозы вакцины (с неё сотрудник будет переписывать название вакцины и даты, когда вы их получили)</li>
+            <li>ваш паспорт</li>
+            <li>желательно нотариальный перевод паспорта, чтобы не из воздуха сотрудник заполнял украинскую версию свидетельства</li>
+        </ol>
+        <h5>В чате 
+            <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i>t.me/bellviv</a> есть опыт вакцинации в 4 клинической больнице (или поликлинике?) с паспортом без ВВНЖ или ПВНЖ <span>@Verimmozamperamogam</span>.
+        </h5>
+        <h5>
+            В Добробуте можно вакцинироваться но по записи и за 750 грн <span>@djuiceman</span>.
+        </h5>
     </section>
 </body>
 
